// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errorHandle document source 1`] = `
Object {
  "actual": "<?xml version=\\"1.0\\"?>
<!--test-->
<xml/>",
}
`;

exports[`errorHandle should encode < literal when not part of a tag 1`] = `
Object {
  "actual": "<p xmlns=\\"http://www.w3.org/1999/xhtml\\">populaciji (&lt; 0.1%), te se</p>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: invalid tagName:",
      Object {
        "columnNumber": 17,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`errorHandle unclosed tag 1`] = `
Object {
  "actual": "<foo/>",
  "errors": Array [
    Array [
      "error",
      "unexpected end of input",
      Object {
        "columnNumber": 1,
        "lineNumber": 1,
      },
    ],
    Array [
      "warning",
      "unclosed xml attribute",
      Object {
        "columnNumber": 1,
        "lineNumber": 1,
      },
    ],
  ],
}
`;
